Verdere uitwerking van de Medailletabel. Som functie toegevoegd en geïntegreerd in mijn script. Ook eerste stappen gezet in de ReadMe file. Nog ergens bij te voegen: spread operator.

--- a/Hoofdstuk_1/website_medailles.html
+++ b/Hoofdstuk_1/website_medailles.html
@@ -19,9 +19,11 @@
                 <th class = 'goud'>Goud</th>
                 <th class = 'zilver'>Zilver</th>
                 <th class = 'brons'>Brons</th>
+                <th>Totaal</th>
             </tr>
             <tbody id = 'landen-lijst'></tbody>
         </table>
+        <img src="hoofdstuk_1/olympische_ringen.svg.png" alt="Olympische Ringen" class="ringen">
         <script src = "script_medailles.js"></script> 
 </body>
 </html>
