Eerst iets anders geprobeerd, maar dit was te complex... Opnieuw gestart met een ander project.

--- a/Hoofdstuk_1/website_medailles.html
+++ b/Hoofdstuk_1/website_medailles.html
@@ -23,7 +23,7 @@
             </tr>
             <tbody id = 'landen-lijst'></tbody>
         </table>
-        <img src="hoofdstuk_1/olympische_ringen.svg.png" alt="Olympische Ringen" class="ringen">
+        <img src="olympische_ringen.svg.png" alt="Olympische Ringen" class="ringen">
         <script src = "script_medailles.js"></script> 
 </body>
 </html>
