eerste versie rekensommetjes

--- a/Hoofdstuk_1/medailles.html
+++ b/Hoofdstuk_1/medailles.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medailletabel Parijs 2024</title>
-    <link rel = "stylesheet" href = "stijl_medailles.css">
+    <link rel = "stylesheet" href = "medailles.css">
     <!--ik gebruik hier een leuke Googlefont anders is het ook maar saai-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,6 +24,6 @@
             <tbody id = 'landen-lijst'></tbody>
         </table>
         <img src="olympische_ringen.svg.png" alt="Olympische Ringen" class="ringen">
-        <script src = "script_medailles.js"></script> 
+        <script src = "medailles.js"></script> 
 </body>
 </html>
