--- a/Hoofdstuk_2/rekensommetjes.html
+++ b/Hoofdstuk_2/rekensommetjes.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rekensommetjes</title>
+    <link rel = "stylesheet" href = "rekensommetjes.css">
 </head>
 <body>
+<h1>Sommen</h1>
+<p>5 + 6 = <span id = "som1"></span></p>
+<p>4 + 3 = <span id = "som2"></span></p>
+<p >15 * 8 = <span id = "som3"></span></p>
+<p>16 - 20 = <span id = "som4"></span></p>
+<p> 3 / 5 = <span id = "som 5"></span></p>
+<script src = "rekensommetjes.script"></script>
     
 </body>
 </html>
