--- a/Hoofdstuk_2/rekensommetjes.html
+++ b/Hoofdstuk_2/rekensommetjes.html
@@ -12,8 +12,8 @@
 <p>4 + 3 = <span id = "som2"></span></p>
 <p >15 * 8 = <span id = "som3"></span></p>
 <p>16 - 20 = <span id = "som4"></span></p>
-<p> 3 / 5 = <span id = "som 5"></span></p>
-<script src = "rekensommetjes.script"></script>
+<p> 3 / 0 = <span id = "som5"></span></p>
+<script src = "rekensommetjes.js"></script>
     
 </body>
 </html>
