--- a/Hoofdstuk_2/rekensommetjes.html
+++ b/Hoofdstuk_2/rekensommetjes.html
@@ -7,7 +7,8 @@
     <link rel = "stylesheet" href = "rekensommetjes.css">
 </head>
 <body>
-<h1>Sommen</h1>
+<h1>Rekensommetjes</h1>
+<p>Hieronder vind je de oplossingen van een aantal rekensommetjes:</p>
 <p>5 + 6 = <span id = "som1"></span></p>
 <p>4 + 3 = <span id = "som2"></span></p>
 <p >15 * 8 = <span id = "som3"></span></p>
