--- a/Hoofdstuk_3/formulier.html
+++ b/Hoofdstuk_3/formulier.html
@@ -4,70 +4,75 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href = "formulier.css"></link>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <title>Inschrijvingsformulier</title>
 </head>
 <body>
-    <h1  id = "hulpnodig">Inschrijvingsformulier Fitnesslessen<br> Total Fit Fitness</h1>
-    <form id = "formulier">
-        <h2>Persoonsgegevens</h2>
-            <label>Voornaam:</label>
-            <input type = "text" maxlength = "30" required>
-            <label>Achternaam:</label>
-            <input type = "text" maxlength = "30" required><br>
-            <label>Geboortedatum:</label>
-            <input type = "date" required>
-            <label>Gender:</label>
-            <input id = "vrouw" type = "radio" name = "gender" value = "v">
-            <label for = "vrouw">Vrouw</label>
-            <input id = "man" type = "radio" name = "gender" value = "m">
-            <label for = "man">Man</label>
-            <input id = "x" type = "radio" name = "gender" value = "x">
-            <label for = "x">X</label><br>
-            <label>Straat: </label>
-            <input type = "text" required>
-            <label>Huisnummer: </label>
-            <input type ="text" required>
-            <label>Postcode: </label>
-            <input type = "text" required>
-            <label>Plaats: </label>
-            <input type = "text" required>
-            <label>Land: </label>
-            <input type = "text" required><br>
-            <label>E-mail:</label>
-            <input type = "email" required>
-            <label>Telefoon: </label>
-            <input type = "tel">
-            <label>GSM-nr: </label>
-            <input type = "tel">
-        <h2>Levensstijl</h2>
-            <label>Gewicht (kg) :</label>
-            <input type = "text" id = "gewicht" required>
-            <label>Lengte (m): </label>
-            <input type = "text" id = "lengte" required>
-            <button type = "button" onclick = "berekenUitHTML()">Bereken BMI</button>
-            <label id = "BMI">BMI = </label><br>
-            <label>Ik eet...</label>
-            <select name = "voedingspatroon">
-                <option value = "o">Ongezond</option>
-                <option value = "e">Evenwichtig</option>
-                <option value = "mg">Gezond</option>
-            </select><br>
-            <label>Ik sport...</label>
-            <select name = "sportpatroon">
-                <option value = "n">Nooit</option>
-                <option value = "s">Soms</option>
-                <option value = "r">Regelmatig</option>
-                <option value = "v">Vaak</option>
-            </select>
-        <h2>Motivatie</h2>
-        <p>Hoeveel zin heb je in het fitnessprogramma? Typ: "Heel veel zin" als je gemotiveerd bent!</p>
-        <input id = "motivatie" type = "text" required>
-        <button type ="button" onclick="checkMotivatie()">Check mijn motivatie</button>
-        <p>Ter verificatie dat je een echt persoon bent: Wat is de som van 5 + 3?</p>
-        <input type = "text" id="verificatie"  required>
-        <button type = "button" onclick = "controleVerificatie()">Check of de som juist is.</button>
-        <input type ="submit" value = "doorsturen">
-    </form>
+    <h1  id = "hulpnodig">Inschrijvingsformulier Fitnesslessen<br> TOTALFIT Fitness</h1>
+    <div class = "container">
+        <form id = "formulier">
+            <h2>Persoonsgegevens</h2>
+                <label>Voornaam:</label>
+                <input type = "text" maxlength = "30" required>
+                <label>Achternaam:</label>
+                <input type = "text" maxlength = "30" required><br>
+                <label>Geboortedatum:</label>
+                <input type = "date" required>
+                <label>Gender:</label>
+                <input id = "vrouw" type = "radio" name = "gender" value = "v">
+                <label for = "vrouw">Vrouw</label>
+                <input id = "man" type = "radio" name = "gender" value = "m">
+                <label for = "man">Man</label>
+                <input id = "x" type = "radio" name = "gender" value = "x">
+                <label for = "x">X</label><br>
+                <label>Straat: </label>
+                <input type = "text" required>
+                <label>Huisnummer: </label>
+                <input type ="text" required>
+                <label>Postcode: </label>
+                <input type = "text" required>
+                <label>Plaats: </label>
+                <input type = "text" required>
+                <label>Land: </label>
+                <input type = "text" required><br>
+                <label>E-mail:</label>
+                <input type = "email" required>
+                <label>Telefoon: </label>
+                <input type = "tel">
+                <label>GSM-nr: </label>
+                <input type = "tel">
+            <h2>Levensstijl</h2>
+                <label>Gewicht (kg) :</label>
+                <input type = "text" id = "gewicht" required>
+                <label>Lengte (m): </label>
+                <input type = "text" id = "lengte" required>
+                <button type = "button" onclick = "berekenUitHTML()">Bereken BMI</button><br>
+                <label id = "BMI">BMI = </label><br>
+                <label>Ik eet...</label>
+                <select name = "voedingspatroon">
+                    <option value = "o">Ongezond</option>
+                    <option value = "e">Evenwichtig</option>
+                    <option value = "mg">Gezond</option>
+                </select><br>
+                <label>Ik sport...</label>
+                <select name = "sportpatroon">
+                    <option value = "n">Nooit</option>
+                    <option value = "s">Soms</option>
+                    <option value = "r">Regelmatig</option>
+                    <option value = "v">Vaak</option>
+                </select>
+            <h2>Motivatie</h2>
+            <p>Hoeveel zin heb je in het fitnessprogramma? Typ: "Heel veel zin" als je gemotiveerd bent!</p>
+            <input id = "motivatie" type = "text" required>
+            <button type ="button" onclick="checkMotivatie()">Check mijn motivatie</button>
+            <p>Ter verificatie dat je een echt persoon bent: Wat is de som van 5 + 3?</p>
+            <input type = "text" id="verificatie"  required>
+            <button type = "button" onclick = "controleVerificatie()">Check of de som juist is.</button><br>
+            <input type ="submit" value = "DOORSTUREN NAAR TOTALFIT" id = "submitbutton" onclick="formulierVerstuurd()">
+        </form>
+        <img src ="fitness.jpg" alt = "Een mooi lichaam">
     <script src="formulier.js"></script>
 </body>
 </html>
