--- a/Project_3/formulier.html
+++ b/Project_3/formulier.html
@@ -47,7 +47,7 @@
                 <label>Gewicht (kg) :</label>
                 <input type = "text" id = "gewicht" placeholder = "Geef je gewicht in kg (Voorbeeld: 90)" required>
                 <label>Lengte (m): </label>
-                <input type = "text" id = "lengte" placeholder = "Geef je lengte in mete (Voorbeeld: 1.80)" required>
+                <input type = "text" id = "lengte" placeholder = "Geef je lengte in meter (Voorbeeld: 1.80)" required>
                 <button type = "button" onclick = "berekenUitHTML()">Bereken BMI</button><br>
                 <label id = "BMI">BMI = </label><br>
                 <label>Ik eet...</label>
