LocalStorage toegevoegd (zeer eenvoudig)

--- a/Project_1/medailles.html
+++ b/Project_1/medailles.html
@@ -23,6 +23,9 @@
             </tr>
             <tbody id = 'landen-lijst'></tbody>
         </table>
+        <label>Wat is je reactie op deze medaillestand?</label><br><br>
+        <input type = "text" placeholder = "Voer hier iets in" id="invoer"> 
+        <p id = "herhaling"></p>
         <img src="olympische_ringen.svg.png" alt="Olympische Ringen" class="ringen">
         <script src = "medailles.js"></script> 
 </body>
