--- a/Project_1/medailles.html
+++ b/Project_1/medailles.html
@@ -26,7 +26,7 @@
         <label>Wat is je reactie op deze medaillestand?</label><br><br>
         <input type = "text" placeholder = "Voer hier iets in" id="invoer"> 
         <p id = "herhaling"></p>
-        <img src="olympische_ringen.svg.png" alt="Olympische Ringen" class="ringen">
+        <img src="images/olympische_ringen.svg.png" alt="Olympische Ringen" class="ringen">
         <script src = "medailles.js"></script> 
 </body>
 </html>
