Review (3) - project 2 + eerste review project 3

--- a/Project_3/formulier.html
+++ b/Project_3/formulier.html
@@ -76,7 +76,7 @@
             <button type = "button" onclick = "controleVerificatie()">Check of de som juist is.</button><br>
             <input type ="submit" value = "DOORSTUREN NAAR TOTALFIT" id = "submitbutton" onclick="formulierVerstuurd()">
         </form>
-        <img src ="fitness.jpg" alt = "Een mooi lichaam">
+        <img src ="images/fitness.jpg" alt = "Een mooi lichaam">
     <script src="formulier.js"></script>
 </body>
 </html>
