--- a/Project_2/rekensommetjes.html
+++ b/Project_2/rekensommetjes.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rekensommetjes</title>
-    <link rel = "stylesheet" href = "rekensommetjes.css">
+    <link rel = "stylesheet" href = "rekensommetjes.css"> <!--Koppelen CSS aan HTML-->
 </head>
 <body>
 <h1>Rekensommetjes</h1>
 <p>Hieronder vind je de oplossingen van een aantal rekensommetjes:</p>
-<p>5 + 6 = <span id = "som1"></span></p>
+<p>5 + 6 = <span id = "som1"></span></p> <!--Gebruik maken van span (inline) voor sommen uit te rekenen-->
 <p>4 + 3 = <span id = "som2"></span></p>
 <p >15 * 8 = <span id = "som3"></span></p>
 <p>16 - 20 = <span id = "som4"></span></p>
